--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8.0)
 # Options
 #
 option(BUILD_XPACK   "build xpack test"     OFF)
-option(BUILD_TEMPL   "build template test"  OFF)
+option(BUILD_TEMPL   "build template test"  ON)
 option(BUILD_MYLOG   "build mylog test"     OFF)
 
 file(COPY ${PROJECT_SOURCE_DIR}/files/metro.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
