--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ cmake_minimum_required(VERSION 2.8.0)
 option(BUILD_XPACK   "build xpack test"     OFF)
 option(BUILD_TEMPL   "build template test"  ON)
 option(BUILD_MYLOG   "build mylog test"     OFF)
+option(BUILD_MGRAPH  "build mgraph test"    ON)
 
 file(COPY ${PROJECT_SOURCE_DIR}/files/metro.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
@@ -23,4 +24,8 @@ endif()
 
 if (BUILD_MYLOG)
     add_executable(mylog mylog.cpp)
+endif()
+
+if (BUILD_MGRAPH)
+    add_executable(tmgraph tmgraph.cpp)
 endif()
