--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,8 @@ option(BUILD_TEMPL   "build template test"  ON)
 option(BUILD_MYLOG   "build mylog test"     OFF)
 option(BUILD_MGRAPH  "build mgraph test"    ON)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 file(COPY ${PROJECT_SOURCE_DIR}/files/metro.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 #
