--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,10 +3,10 @@ cmake_minimum_required(VERSION 2.8.0)
 #
 # Options
 #
-option(BUILD_XPACK   "build xpack test"     ON)
-option(BUILD_TEMPL   "build template test"  ON)
-option(BUILD_MYLOG   "build mylog test"     OFF)
-option(BUILD_MGRAPH  "build mgraph test"    ON)
+option(BUILD_XPACK   "build xpack test"          ON)
+option(BUILD_TEMPL   "build template test"       ON)
+option(BUILD_MYLOG   "build mylog test"          OFF)
+option(BUILD_MG_BASE "build mgraph base test"    ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -28,6 +28,6 @@ if (BUILD_MYLOG)
     add_executable(mylog mylog.cpp)
 endif()
 
-if (BUILD_MGRAPH)
-    add_executable(tmgraph tmgraph.cpp)
+if (BUILD_MG_BASE)
+    add_executable(mg_base mg_base.cpp)
 endif()
