--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,10 +3,11 @@ cmake_minimum_required(VERSION 2.8.0)
 #
 # Options
 #
-option(BUILD_XPACK   "build xpack test"          ON)
-option(BUILD_TEMPL   "build template test"       ON)
-option(BUILD_MYLOG   "build mylog test"          OFF)
-option(BUILD_MG_BASE "build mgraph base test"    ON)
+option(BUILD_XPACK          "build xpack test"              ON)
+option(BUILD_TEMPL          "build template test"           ON)
+option(BUILD_MYLOG          "build mylog test"              OFF)
+option(BUILD_MG_BASE        "build mgraph base test"        ON)
+option(BUILD_MG_TRAVERSE    "build mgraph bfs and dfs test" ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -30,4 +31,8 @@ endif()
 
 if (BUILD_MG_BASE)
     add_executable(mg_base mg_base.cpp)
+endif()
+
+if (BUILD_MG_TRAVERSE)
+    add_executable(mg_traverse mg_traverse.cpp)
 endif()
