--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ option(BUILD_MG_BASE        "build mgraph base test"        OFF)
 option(BUILD_MG_TRAVERSE    "build mgraph bfs and dfs test" OFF)
 option(BUILD_MG_PRIM        "build mgraph prim test"        ON)
 option(BUILD_MG_KRUSKAL     "build mgraph kruskal test"     ON)
+option(BUILD_MG_SHORTEST    "build mgraph shortest test"    ON)
 
 set(CMAKE_BUILD_TYPE Debug)
 
@@ -45,4 +46,8 @@ endif()
 
 if (BUILD_MG_KRUSKAL)
     add_executable(mg_kruskal mg_kruskal.cpp)
+endif()
+
+if (BUILD_MG_SHORTEST)
+    add_executable(mg_shortest mg_shortest.cpp)
 endif()
